--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "expo": "~54.0.27",
+    "expo-screen-orientation": "~9.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-vector-icons": "^10.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
